live tracking first
